--- a/p-details.css
+++ b/p-details.css
@@ -1,4 +1,5 @@
-    body {
+       .main{
+        direction: rtl;
             font-family: 'Cairo', sans-serif;
             background-color: #f9f9f9;
             padding: 30px;
