--- a/productDetails/ProductDetails.css
+++ b/productDetails/ProductDetails.css
@@ -7,6 +7,27 @@
 .dark-color{
   color: #666666;
 }
+/* .fill{
+    background-color: #FFC62A;
+} */
+/* نجمة عادية */
+.rating-stars .star {
+  font-size: 20px;
+  color: #ddd;                /* فارغة */
+  position: relative;
+  display: inline-block;
+}
+
+/* طبقة الملء */
+.rating-stars .star::before {
+  content: "★";               /* نفس الرمز */
+  position: absolute;
+  inset: 0;
+  color: #f5b301;             /* لون النجمة المملوءة */
+  width: 0;                   /* سيُضبط بالـ JS */
+  overflow: hidden;
+}
+
 #imagesCol .product-details-images img{
   border: 1px solid #EEEEEE;
 }
@@ -84,7 +105,6 @@
      padding: 20px;
      font-size: 14px;
      color: #333333;
-      background-color: white;
       transition: all 0.5s ease-in-out;
 }
 #product-details .total-details .details-count i:hover{
