--- a/productDetails/p-details.css
+++ b/productDetails/p-details.css
@@ -132,4 +132,6 @@
             .double-images img {
                 width: 100%;
             }
+               .nav-tabs .nav-link {
+    font-size: 13px;}
         }
